--- a/.github/workflows/kanzal.yml
+++ b/.github/workflows/kanzal.yml
@@ -9,12 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: install ssh keys
-      run: |
-        install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -p 8010 -H 103.83.89.237  > ~/.ssh/known_hosts
-    - name: connect and command
-      run: ssh root@103.83.89.237 -p 8010 "mkdir kanzal"
-    - name: cleanup
-      run: rm -rf ~/.ssh
+      - uses: actions/checkout@v2 
+      - name: Deploy in EC2
+        env:
+          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY  }}
+        run: |
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key -p 8010 root@103.83.89.237 "mkdir kanzal"
