--- a/.github/workflows/kanzal.yml
+++ b/.github/workflows/kanzal.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2 
       - name: Deploy in EC2
         env:
-          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY  }}
+          PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key -p 8010 root@103.83.89.237 "mkdir kanzal"
+          ssh -o StrictHostKeyChecking=no -i private_key ubuntu@16.171.26.161 "mkdir kanzal"
